// Original file: proto/task.proto


export interface TaskResponse {
  'id'?: (string);
  'content'?: (string);
  'done'?: (string);
  'createdAt'?: (string);
  'name'?: (string);
  'avatarUrl'?: (string);
}

export interface TaskResponse__Output {
  'id'?: (string);
  'content'?: (string);
  'done'?: (string);
  'createdAt'?: (string);
  'name'?: (string);
  'avatarUrl'?: (string);
}
